# 159_731ComputerVision

./: README.md
SL/: opencv_01的替身
assignment1/: camera_with_fps.cpp
assignment1/demo01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kuwahara  kuwahara.cbp
assignment1/demo01/src/: main-Y.cpp  main-v1.cpp  main-v11.cpp  main.cpp  main_old.cpp  main_v2.cpp
assignment1/submit/TaoJiang(Tommy)20004769/: Makefile  (+2 more)
assignment2/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  barcodes  barcodes.cbp  cmake_install.cmake  kuwahara.cbp
assignment2/demo/include/: ImgModel.h
assignment2/demo/src/: ImgModel.cpp  demo-decode成功-旋转有点问题.cpp  demo-yv-final.cpp  demo-yv.cpp  demo-两次霍夫调整图片位置.cpp  demo-循环读色块出现问题-无法按步长循环遍历.cpp  demo-步长读点有误.cpp  demo.cpp  main-v2.cpp  main-v3.cpp  main-旋转done.cpp  main.cpp
assignment2/qr_code-notworking/: testing.py  未命名.ipynb
assignment3/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  barcodes.cbp  cmake_install.cmake  gesture  gesture.cbp
assignment3/demo/include/: LoadData.h
assignment3/demo/res/: Glass_ann_model.xml  all_img.data  all_img_ann_model.xml  test.data
assignment3/demo/src/: LoadData.cpp  MLP_example.cpp  demo.cpp  demo_mlp_670.cpp  main.cpp  test.cpp
assignment3/demoHSV/: CMakeCache.txt  Makefile  barcodes  cmake_install.cmake  gesture  gesture.cbp
assignment3/demoHSV_740/: CMakeCache.txt  Makefile  cmake_install.cmake  gesture  gesture.cbp
assignment3/demoHSV_v/: CMakeCache.txt  Makefile  cmake_install.cmake  gesture  gesture.cbp
assignment3/demoHSV_vv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gesture  gesture.cbp
assignment3/demoHSV_vv2/: CMakeCache.txt  Makefile  cmake_install.cmake  gesture  gesture.cbp
assignment3/sumbit/TaoJiang-30/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gesture  gesture.cbp
assignment3/sumbit/TaoJiang-30/gesture_Debug/: gesture
assignment3/sumbit/TaoJiang-30/res/: gesture.xml  gesture_test.data  gesture_train.data
assignment3/sumbit/TaoJiang-30/src/: main.cpp
assignment3/testing/: test.ipynb
demo/demo01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_demo  opencv_demo.cbp
demo/demo01/include/: camera_HSV_filter.c  camera_RGB_filter.c
demo/demo01/opencv_demo.dSYM/Contents/: Info.plist
demo/demo01/opencv_demo.dSYM/Contents/Resources/DWARF/: opencv_demo
demo/demo01/sl/: demo01.cpp  main.cpp
demo/demo01/week02/: main.cpp
demo/demo01/week03/: main.cpp
demo/demo01/week04/: main.cpp
demo/demo01/week05/: main.cpp
demo/py-demo/: 00.ipynb  01_imageProcess.ipynb  02_image_effect.ipynb  03_draw.ipynb  04_filter.ipynb  projec2-test.ipynb  projec2-test2.ipynb
miniproject/RLIMS-template-LaTeX/: README.txt  arlims.cls  rlims-instructions.tex  rlims-template.tex
miniproject/RLIMS-template-Word/: rlims-instructions.doc  rlims-template.dot
week05/Colour classification RGB and HSV codes-20200321/: camera_HSV_filter.c  controls_logitech.c
week06-image_compression/Sample Codes for Exercises Chapter 6-20200505/: DCT_8x8_INV.cpp  huffman_noTrees_AnswerQuestion1.c
week07-video_processing/: YUVtoOpenCV.c
(+187 files in other folders)
